@@ -11243,6 +11243,239 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+comment|// LUCENE-1586: getUniqueTermCount
+DECL|method|testUniqueTermCount
+specifier|public
+name|void
+name|testUniqueTermCount
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Directory
+name|dir
+init|=
+operator|new
+name|MockRAMDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriter
+name|writer
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+operator|new
+name|WhitespaceAnalyzer
+argument_list|()
+argument_list|,
+name|IndexWriter
+operator|.
+name|MaxFieldLength
+operator|.
+name|UNLIMITED
+argument_list|)
+decl_stmt|;
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Field
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"a b c d e f g h i j k l m n o p q r s t u v w x y z"
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|NO
+argument_list|,
+name|Field
+operator|.
+name|Index
+operator|.
+name|ANALYZED
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Field
+argument_list|(
+literal|"number"
+argument_list|,
+literal|"0 1 2 3 4 5 6 7 8 9"
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|NO
+argument_list|,
+name|Field
+operator|.
+name|Index
+operator|.
+name|ANALYZED
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+name|IndexReader
+name|r
+init|=
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|dir
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|36
+argument_list|,
+name|r
+operator|.
+name|getUniqueTermCount
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+name|IndexReader
+name|r2
+init|=
+name|r
+operator|.
+name|reopen
+argument_list|()
+decl_stmt|;
+name|r
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+try|try
+block|{
+name|r2
+operator|.
+name|getUniqueTermCount
+argument_list|()
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"expected exception"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|UnsupportedOperationException
+name|uoe
+parameter_list|)
+block|{
+comment|// expected
+block|}
+name|IndexReader
+index|[]
+name|subs
+init|=
+name|r2
+operator|.
+name|getSequentialSubReaders
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|subs
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|assertEquals
+argument_list|(
+literal|36
+argument_list|,
+name|subs
+index|[
+name|i
+index|]
+operator|.
+name|getUniqueTermCount
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+name|r2
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|writer
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 end_class
 end_unit
